--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@
 }
 
 .flex1{
-    background: url(../login/pop\ 4\ bg.JPG);
+    background: url(pop\ 4\ bg.JPG);
     background-size: 1010px;
     background-repeat: no-repeat;
     background-position: center;
